.deploy/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-col2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-col2
  template:
    metadata:
      labels:
        app: poc-col2
    spec:
      containers:
        - name: poc-col2
          image: melobenja/demo-backend:poc-col
          resources:
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
