.deploy/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-col-svc1
spec:
  selector:
    app: poc-col1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
