.deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-backend-ingress
spec:
  rules:
    - host: demobackend.dev.insee.io/
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-backend-svc
                port:
                  number: 8080
